--- a/index.html
+++ b/index.html
@@ -13,30 +13,37 @@
 </head>
 <body style="color:white;">
     <center>
-    <img src="img/1.jpg" style="height:500px;width:300px;">
+    <img src="img/1.jpg" style="height:500px;width:350px;">
     </center>
     <center>
-        <img src="img/2.jpg" style="height:500px;width:300px;">
+        <img src="img/2.jpg" style="height:500px;width:350px;">
         </center>
         <center>
-            <img src="img/3.jpg" style="height:500px;width:300px;">
+            <img src="img/3.jpg" style="height:500px;width:350px;">
             </center>
             <center>
-                <img src="img/4.jpg" style="height:500px;width:300px;">
+                <img src="img/4.jpg" style="height:500px;width:350px;">
                 </center>
                 <center>
-                    <img src="img/5.jpg" style="height:500px;width:300px;">
+                    <img src="img/5.jpg" style="height:500px;width:350px;">
                     </center>
                     <center>
-                        <img src="img/6.jpg" style="height:500px;width:300px;">
+                        <img src="img/6.jpg" style="height:500px;width:350px;">
                         </center>
                         <center>
                             <img src="img/7.jpg" style="height:500px;width:350px;">
-
-                            <img src="img/11.jpg" style="height:850;width:300px;">
-                            <img src="img/12.jpg" style="height:850px;width:300px;">
-                            <img src="img/13.jpg" style="height:850px;width:300px;">
-                            <a href="https://drive.google.com/drive/folders/15XETl0rR6za739ykI25PBZfjJMwP0ztr?usp=sharing"><button style="color: white;background:rgb(0, 136, 255);height:37px;width:100px;border:black;border-radius:40px;margin-top:10px;margin-bottom:20px;">View More</button></a>
-                            </center>
+                              </center>
+                              <center>
+                                <img src="img/11.jpg" style="height:800px;width:350px;">
+                                  </center>
+                                  <center>
+                                    <img src="img/12.jpg" style="height:800px;width:350px;">
+                                      </center>
+                                      <center>
+                                        <img src="img/13.jpg" style="height:800px;width:350px;">
+                                          </center>
+                       
+                           <center><a href="https://drive.google.com/drive/folders/15XETl0rR6za739ykI25PBZfjJMwP0ztr?usp=sharing"><button style="color: white;background:rgb(0, 136, 255);height:37px;width:100px;border:black;border-radius:40px;margin-top:10px;margin-bottom:20px;">View More</button></a></center>
+                            
 </body>
 </html>
